# ctpl

./: .gitignore  HACKING  Makefile  Makefile.am  NEWS  README.in  THANKS  TODO  autogen.sh  configure.ac  cross-build-mingw.sh  ctpl.pc.in  wscript
data/: Makefile.am  ctpl.1  ctpl.pc.in
docs/reference/: Makefile.am
docs/reference/ctpl/: Makefile.am  ctpl-docs.sgml  ctpl-sections.txt
po/: Makevars  POTFILES.in  fr.po  it.po
src/: Ctpl-1.0.metadata  Ctpl-1.0.vala  Makefile.am  ctpl-environ.c  ctpl-environ.h  ctpl-eval.c  ctpl-eval.h  ctpl-i18n.c  ctpl-i18n.h  ctpl-input-stream.c  ctpl-input-stream.h  ctpl-io.c  ctpl-io.h  ctpl-lexer-expr.c  ctpl-lexer-expr.h  ctpl-lexer-private.h  ctpl-lexer.c  ctpl-lexer.h  ctpl-mathutils.c  ctpl-mathutils.h  ctpl-output-stream.c  ctpl-output-stream.h  ctpl-parser.c  ctpl-parser.h  ctpl-stack.c  ctpl-stack.h  ctpl-token-private.h  ctpl-token.c  ctpl-token.h  ctpl-value.c  ctpl-value.h  ctpl-version.c  ctpl-version.h  ctpl.c  ctpl.h  environ.c  environ.h  eval.c  eval.h  input-stream.c  (+28 more)
testsuite/: Makefile.am  ctpl-test-lib.c  ctpl-test-lib.h  environ  float-test.c  gtype-api-test.c  parsing-tests.c  read-number-test.c  tests.sh
testsuite/fail/: 1  2  array-index  array-index2  string-mul  string-mul2
testsuite/filters/: filter-1  filter-1-output  filter-2  filter-3  filter-3-output  filter-chain-1  filter-chain-1-output  filter-chain-2  filter-chain-2-output  filter-chain-3  filter-chain-3-output  filter-priority-1  filter-priority-1-output  filter-priority-2  filter-priority-2-output  filter-priority-3  filter-priority-3-output
testsuite/success/: 1  1-output  2  2-output  3  3-output  4  4-output  5  6  6-output  7  7-output  8  8-output  array-comparison  array-comparison-output  array-index  array-index-output  floats  floats-output  for-expr  for-expr-output  string-literals  string-mul  string-mul-output
