SUBDIRS = src data docs

EXTRA_DIST = COPYING \
             HACKING \
             NEWS \
             README \
             THANKS \
             TODO \
             autogen.sh \
             waf \
             wscript

DISTCLEANFILES = config.status \
                 config.log

DISTCHECK_CONFIGURE_FLAGS = --enable-gtk-doc

ACLOCAL_AMFLAGS = -I build/m4
